// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generates token 1`] = `
<TokenStep
  onContinue={[Function]}
  open={true}
  stepNumber={1}
>
  <Step
    open={true}
    renderForm={[Function]}
    renderResult={[Function]}
    stepNumber={1}
    stepTitle="onboarding.token.header"
  >
    <div
      className="boxed-group onboarding-step onboarding-step-open"
    >
      <div
        className="onboarding-step-number"
      >
        1
      </div>
      <div
        className="boxed-group-header"
      >
        <h2>
          onboarding.token.header
        </h2>
      </div>
      <div
        className="boxed-group-inner"
      >
        <form
          onSubmit={[Function]}
        >
          <input
            autoFocus={true}
            className="input-large spacer-right text-middle"
            onChange={[Function]}
            placeholder="onboarding.token.placeholder"
            required={true}
            type="text"
            value=""
          />
          <button
            className="text-middle"
          >
            onboarding.token.generate
          </button>
        </form>
        <div
          className="note big-spacer-top width-50"
        >
          onboarding.token.text
        </div>
      </div>
    </div>
  </Step>
</TokenStep>
`;

exports[`generates token 2`] = `
<TokenStep
  onContinue={[Function]}
  open={true}
  stepNumber={1}
>
  <Step
    open={true}
    renderForm={[Function]}
    renderResult={[Function]}
    stepNumber={1}
    stepTitle="onboarding.token.header"
  >
    <div
      className="boxed-group onboarding-step onboarding-step-open"
    >
      <div
        className="onboarding-step-number"
      >
        1
      </div>
      <div
        className="boxed-group-header"
      >
        <h2>
          onboarding.token.header
        </h2>
      </div>
      <div
        className="boxed-group-inner"
      >
        <form
          onSubmit={[Function]}
        >
          <input
            autoFocus={true}
            className="input-large spacer-right text-middle"
            onChange={[Function]}
            placeholder="onboarding.token.placeholder"
            required={true}
            type="text"
            value="my token"
          />
          <i
            className="spinner text-middle"
          />
        </form>
        <div
          className="note big-spacer-top width-50"
        >
          onboarding.token.text
        </div>
      </div>
    </div>
  </Step>
</TokenStep>
`;

exports[`generates token 3`] = `
<TokenStep
  onContinue={[Function]}
  open={true}
  stepNumber={1}
>
  <Step
    open={true}
    renderForm={[Function]}
    renderResult={[Function]}
    stepNumber={1}
    stepTitle="onboarding.token.header"
  >
    <div
      className="boxed-group onboarding-step onboarding-step-open"
    >
      <div
        className="onboarding-step-number"
      >
        1
      </div>
      <div
        className="boxed-group-header"
      >
        <h2>
          onboarding.token.header
        </h2>
      </div>
      <div
        className="boxed-group-inner"
      >
        <form
          onSubmit={[Function]}
        >
          <span
            className="text-middle"
          >
            my token
            : 
          </span>
          <span
            className="spacer-right text-middle"
          >
            abcd1234
          </span>
          <button
            className="button-clean text-middle"
            onClick={[Function]}
          >
            <i
              className="icon-delete"
            />
          </button>
        </form>
        <div
          className="note big-spacer-top width-50"
        >
          onboarding.token.text
        </div>
        <div
          className="big-spacer-top"
        >
          <button
            className="js-continue"
            onClick={[Function]}
          >
            continue
          </button>
        </div>
      </div>
    </div>
  </Step>
</TokenStep>
`;

exports[`revokes token 1`] = `
<TokenStep
  onContinue={[Function]}
  open={true}
  stepNumber={1}
>
  <Step
    open={true}
    renderForm={[Function]}
    renderResult={[Function]}
    stepNumber={1}
    stepTitle="onboarding.token.header"
  >
    <div
      className="boxed-group onboarding-step onboarding-step-open"
    >
      <div
        className="onboarding-step-number"
      >
        1
      </div>
      <div
        className="boxed-group-header"
      >
        <h2>
          onboarding.token.header
        </h2>
      </div>
      <div
        className="boxed-group-inner"
      >
        <form
          onSubmit={[Function]}
        >
          <span
            className="text-middle"
          >
            my token
            : 
          </span>
          <span
            className="spacer-right text-middle"
          >
            abcd1234
          </span>
          <button
            className="button-clean text-middle"
            onClick={[Function]}
          >
            <i
              className="icon-delete"
            />
          </button>
        </form>
        <div
          className="note big-spacer-top width-50"
        >
          onboarding.token.text
        </div>
        <div
          className="big-spacer-top"
        >
          <button
            className="js-continue"
            onClick={[Function]}
          >
            continue
          </button>
        </div>
      </div>
    </div>
  </Step>
</TokenStep>
`;

exports[`revokes token 2`] = `
<TokenStep
  onContinue={[Function]}
  open={true}
  stepNumber={1}
>
  <Step
    open={true}
    renderForm={[Function]}
    renderResult={[Function]}
    stepNumber={1}
    stepTitle="onboarding.token.header"
  >
    <div
      className="boxed-group onboarding-step onboarding-step-open"
    >
      <div
        className="onboarding-step-number"
      >
        1
      </div>
      <div
        className="boxed-group-header"
      >
        <h2>
          onboarding.token.header
        </h2>
      </div>
      <div
        className="boxed-group-inner"
      >
        <form
          onSubmit={[Function]}
        >
          <span
            className="text-middle"
          >
            my token
            : 
          </span>
          <span
            className="spacer-right text-middle"
          >
            abcd1234
          </span>
          <i
            className="spinner text-middle"
          />
        </form>
        <div
          className="note big-spacer-top width-50"
        >
          onboarding.token.text
        </div>
        <div
          className="big-spacer-top"
        >
          <button
            className="js-continue"
            onClick={[Function]}
          >
            continue
          </button>
        </div>
      </div>
    </div>
  </Step>
</TokenStep>
`;

exports[`revokes token 3`] = `
<TokenStep
  onContinue={[Function]}
  open={true}
  stepNumber={1}
>
  <Step
    open={true}
    renderForm={[Function]}
    renderResult={[Function]}
    stepNumber={1}
    stepTitle="onboarding.token.header"
  >
    <div
      className="boxed-group onboarding-step onboarding-step-open"
    >
      <div
        className="onboarding-step-number"
      >
        1
      </div>
      <div
        className="boxed-group-header"
      >
        <h2>
          onboarding.token.header
        </h2>
      </div>
      <div
        className="boxed-group-inner"
      >
        <form
          onSubmit={[Function]}
        >
          <input
            autoFocus={true}
            className="input-large spacer-right text-middle"
            onChange={[Function]}
            placeholder="onboarding.token.placeholder"
            required={true}
            type="text"
            value=""
          />
          <button
            className="text-middle"
          >
            onboarding.token.generate
          </button>
        </form>
        <div
          className="note big-spacer-top width-50"
        >
          onboarding.token.text
        </div>
      </div>
    </div>
  </Step>
</TokenStep>
`;
